--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -10,7 +10,6 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./homePage/css/reset.css">
   <link rel="stylesheet" href="./homePage/css/style.css">
   <link rel="stylesheet" href="./homePage/css/menu.css">
@@ -177,13 +176,13 @@
     <div class="section section-4">
       <h3 class="text-white text-center">Sobre nós</h3>
 
-      <div class="card text-center rounded-5 p-3 pb-1 mt-sm-2 mt-md-3">
+      <div class="card text-center rounded-5 p-3 pb-2 mt-sm-2 mt-md-3">
         <div class="row align-items-center mx-2">
           <div class="col-lg-4 col-md-4 col-sm-12">
             <img class="img-fluid p-4" src="./homePage/images/logo-black.svg" alt="">
           </div>
           <div class="col-lg-8 col-md-8 col-sm-12 mt-2">
-            <h5>Unindo Forças para Fazer a Diferença</h5>
+            <h5>Unindo forças para fazer a diferença</h5>
             <p>A VoluntaRia é um reflexo da união entre amigos com um desejo compartilhado:
               tornar o
               voluntariado
@@ -196,123 +195,47 @@
           </div>
         </div>
       </div>
-    </div>
-    </div>
   </main>
 
-  <footer>
-    <!-- Remove the container if you want to extend the Footer to full width. -->
-    <div class="container my-5">
-      <!-- Footer -->
-      <footer class="text-center text-white" style="background-color: #3f51b5">
-        <!-- Grid container -->
-        <div class="container">
-          <!-- Section: Links -->
-          <section class="mt-5">
-            <!-- Grid row-->
-            <div class="row text-center d-flex justify-content-center pt-5">
-              <!-- Grid column -->
-              <div class="col-md-2">
-                <h6 class="text-uppercase font-weight-bold">
-                  <a href="#!" class="text-white">About us</a>
-                </h6>
-              </div>
-              <!-- Grid column -->
 
-              <!-- Grid column -->
-              <div class="col-md-2">
-                <h6 class="text-uppercase font-weight-bold">
-                  <a href="#!" class="text-white">Products</a>
-                </h6>
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-2">
-                <h6 class="text-uppercase font-weight-bold">
-                  <a href="#!" class="text-white">Awards</a>
-                </h6>
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-2">
-                <h6 class="text-uppercase font-weight-bold">
-                  <a href="#!" class="text-white">Help</a>
-                </h6>
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-2">
-                <h6 class="text-uppercase font-weight-bold">
-                  <a href="#!" class="text-white">Contact</a>
-                </h6>
-              </div>
-              <!-- Grid column -->
-            </div>
-            <!-- Grid row-->
-          </section>
-          <!-- Section: Links -->
-
-          <hr class="my-5" />
-
-          <!-- Section: Text -->
-          <section class="mb-5">
-            <div class="row d-flex justify-content-center">
-              <div class="col-lg-8">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                  distinctio earum repellat quaerat voluptatibus placeat nam,
-                  commodi optio pariatur est quia magnam eum harum corrupti
-                  dicta, aliquam sequi voluptate quas.
-                </p>
-              </div>
-            </div>
-          </section>
-          <!-- Section: Text -->
-
-          <!-- Section: Social -->
-          <section class="text-center mb-5">
-            <a href="" class="text-white me-4">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="" class="text-white me-4">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="" class="text-white me-4">
-              <i class="fab fa-google"></i>
-            </a>
-            <a href="" class="text-white me-4">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a href="" class="text-white me-4">
-              <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="" class="text-white me-4">
-              <i class="fab fa-github"></i>
-            </a>
-          </section>
-          <!-- Section: Social -->
+  <footer class="section text-center text-white pt-3">
+    <hr class="my-5" />
+    <div class="container">
+      <div class="row text-center d-flex justify-content-center">
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="#!" class="text-white">Cadastre-se</a>
+          </h6>
         </div>
-        <!-- Grid container -->
-
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-          © 2020 Copyright:
-          <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="#!" class="text-white">Login</a>
+          </h6>
         </div>
-        <!-- Copyright -->
-      </footer>
-      <!-- Footer -->
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="#!" class="text-white">Projetos</a>
+          </h6>
+        </div>
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="#!" class="text-white">Contato</a>
+          </h6>
+        </div>
+      </div>
+      </section>
     </div>
-    <!-- End of .container -->
+    <hr class="my-5 mb-4" />
+    <div class="text-center p-3 rounded-4" style="background-color: rgba(0, 0, 0, 0.2)">
+      <h6> © 2023 Copyright: VoluntaRia</h6>
+    </div>
   </footer>
 
   <script src="./homePage/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
