--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -1,169 +1,169 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projetos</title>
-    <link rel="stylesheet" href="../homePage/css/reset.css">
-    <link rel="stylesheet" href="projetos.css">
-    <link rel="stylesheet" href="modal.css">
-    <link rel="stylesheet" href="../geral/menu/menu.css"> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/9e6a074965.js" crossorigin="anonymous"></script> 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.all.min.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.min.css"
-      rel="stylesheet"
-    />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projetos</title>
+  <link rel="stylesheet" href="../homePage/css/reset.css">
+  <link rel="stylesheet" href="projetos.css">
+  <link rel="stylesheet" href="modal.css">
+  <link rel="stylesheet" href="../geral/menu/menu.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/9e6a074965.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.all.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.min.css" rel="stylesheet" />
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
-          <div class="container-fluid rounded-3 mx-3">
-            <a class="navbar-brand d-flex nav-link ms-2" href="#">
-              <img src="../homePage/images/logo-white.svg" alt="Logo" width="45" class="d-inline-block align-text-top">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                  <a class="nav-link " aria-current="page" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="projetos.html">Projetos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../perfilVoluntario/perfilVoluntarioo.html">Perfil</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link entrar-sair" href="../loginCadastro/loginCadastro.html">Entrar</a>
-                </li>
-              </ul>
-            </div>
-          </div>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
+      <div class="container-fluid rounded-3 mx-3">
+        <a class="navbar-brand d-flex nav-link ms-2" href="#">
+          <img src="../homePage/images/logo-white.svg" alt="Logo" width="45" class="d-inline-block align-text-top">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="projetos.html">Projetos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../perfilVoluntario/perfilVoluntarioo.html">Perfil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link entrar-sair" href="../loginCadastro/loginCadastro.html">Entrar</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="corpo">
+    <div class="grid-wrapper" id="mainContent">
+      <div class="menu-categoria">
+        <h2 class="menu-categoria-titulo">Categorias</h2>
+        <nav class="container-flex-categoria">
+          <ul class="menu-ul">
+          </ul>
         </nav>
-      </header>
-    <main class="corpo" >
-        <div class="grid-wrapper" id="mainContent">
-            <div class="menu-categoria">
-                <h2 class="menu-categoria-titulo">Categorias</h2>
-                <nav class="container-flex-categoria">
-                    <ul class="menu-ul">
-                    </ul>
-                </nav>
-            </div>
-            <div class="menu-categoria-1col" onclick="expandNav()">
-                <div class="botao-categoria-1col">
-                    <h2 class="menu-categoria-titulo-1col">Categorias</h2>
-                    <i id="icone-dropdown" class="fa-2xl fa-solid fa-caret-down"></i>
-                </div>
-                <nav class="lista-categoria-1col">
-                    <ul class="menu-ul2">
-                    </ul>
-                </nav>
-            </div>
-            <!-- <div class="container-card">
+      </div>
+      <div class="menu-categoria-1col" onclick="expandNav()">
+        <div class="botao-categoria-1col">
+          <h2 class="menu-categoria-titulo-1col">Categorias</h2>
+          <i id="icone-dropdown" class="fa-2xl fa-solid fa-caret-down"></i>
+        </div>
+        <nav class="lista-categoria-1col">
+          <ul class="menu-ul2">
+          </ul>
+        </nav>
+      </div>
+      <!-- <div class="container-card">
                 <img class="image-cards" src="images/imagem-voluntarios-01.jpg">
                 <article>
                     <h2>Moradores de Caucaia</h2>
                     <p class="botao-vermais" onclick="Modal(0)">Ver mais</p>
                 </article>
             </div> -->
-        </div>
-    </main>
-    <footer class="section text-center text-white">
-      <hr class="my-4" />
-      <div class="container">
-          <div class="row text-center d-flex justify-content-center">
-              <div class="col-md-2">
-                  <h6 class="text-uppercase font-weight-bold">
-                      <a href="../index.html" class="text-white">Home</a>
-                  </h6>
-              </div>
-              <div class="col-md-2">
-                  <h6 class="text-uppercase font-weight-bold">
-                      <a href="./projetos/projetos.html" class="text-white">Projetos</a>
-                  </h6>
-              </div>
-              <div class="col-md-2">
-                  <h6 class="text-uppercase font-weight-bold">
-                      <a href="https://api.whatsapp.com/send?phone=5531999999999" class="text-white">Contato</a>
-                  </h6>
-              </div>
-          </div>
-          </section>
-      </div>
-      <hr class="my-4 mb-4" />
-      <div class="text-center p-3 rounded-4 mb-3" style="background-color: rgba(0, 0, 0, 0.2)">
-          <p class="mb-1">Todos os direitos reservados</p>
-          <h6> © 2023 Copyright: VoluntaRia</h6>
-      </div>
-  </footer>
-    <div class="modal-container">
-        <div class="modal-body">
-            <div class="modal-header">
-                <svg onclick="modal(-1)" class="btn-fechar-modal" xmlns="http://www.w3.org/2000/svg" height="1.2em"
-                viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                <path
-                    d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z" />
-            </svg>
-            <h1 class="modal-titulo"></h1>
-            </div>
-           <div id="modalImg" class="modal-imagem-container">
-            
-           </div>
-            <div class="modal-descricao-container">
-                <p class="modal-descricao">
-                </p>
-                
-            </div>
-            <div class="modal-dados-empresa-horas">
-                <div class="modal-horas">
-                    <img class="img-horas"src="svg/relogio-black.svg" alt="">
-                    <h3 class="disponibilidade"></h3>
-                    <h4>Disponibilidade</h4>
-               </div>
-                <div class="modal-empresa">
-                    <img class="img-empresa" src="svg/empresa-black.svg" alt="">
-                    <h3 class="nomeEmpresa"></h3>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <p class="btn-participar">Inscrever</p>
-            </div>
-        </div>
     </div>
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              ...
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
+  </main>
+  <footer class="section text-center text-white">
+    <hr class="my-4" />
+    <div class="container">
+      <div class="row text-center d-flex justify-content-center">
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="../index.html" class="text-white">Home</a>
+          </h6>
         </div>
-      </div> 
-      <script src="../geral/scripts/globalscript.js"></script>  
-    <script  src="./scripts/lista-projetos.js"></script>
-    <script  src="./scripts/categorias.js"></script>
-    <script  src="projetos.js"></script>
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="./projetos/projetos.html" class="text-white">Projetos</a>
+          </h6>
+        </div>
+        <div class="col-md-2">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="https://api.whatsapp.com/send?phone=5531999999999" class="text-white">Contato</a>
+          </h6>
+        </div>
+      </div>
+      </section>
+    </div>
+    <hr class="mb-4" />
+    <div class="text-center p-3 rounded-4 mb-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      <p class="mb-1">Todos os direitos reservados</p>
+      <h6> © 2023 Copyright: VoluntaRia</h6>
+    </div>
+  </footer>
+  <div class="modal-container">
+    <div class="modal-body">
+      <div class="modal-header">
+        <svg onclick="modal(-1)" class="btn-fechar-modal" xmlns="http://www.w3.org/2000/svg" height="1.2em"
+          viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+          <path
+            d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z" />
+        </svg>
+        <h1 class="modal-titulo"></h1>
+      </div>
+      <div id="modalImg" class="modal-imagem-container">
 
-    <script src="./modal.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <script src="./menu.js"></script>
+      </div>
+      <div class="modal-descricao-container">
+        <p class="modal-descricao">
+        </p>
+
+      </div>
+      <div class="modal-dados-empresa-horas">
+        <div class="modal-horas">
+          <img class="img-horas" src="svg/relogio-black.svg" alt="">
+          <h3 class="disponibilidade"></h3>
+          <h4>Disponibilidade</h4>
+        </div>
+        <div class="modal-empresa">
+          <img class="img-empresa" src="svg/empresa-black.svg" alt="">
+          <h3 class="nomeEmpresa"></h3>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <p class="btn-participar">Inscrever</p>
+      </div>
+    </div>
+  </div>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="../geral/scripts/globalscript.js"></script>
+  <script src="./scripts/lista-projetos.js"></script>
+  <script src="./scripts/categorias.js"></script>
+  <script src="projetos.js"></script>
+
+  <script src="./modal.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="./menu.js"></script>
 </body>
+
 </html>
